fix: hero alignments

--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -6,7 +6,7 @@
   background-repeat: no-repeat !important;
   margin-block: 70px;
   overflow: hidden;
-  height: 450px;
+  height: 600px;
 }
 
 .content {
